k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: zebbra-pikett
spec:
  selector:
    matchLabels:
      app: node-red
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: node-red
    spec:
      restartPolicy: Always
      containers:
        - name: node-red
          image: quay.io/zebbra/node-red:3537d4a
          imagePullPolicy: Always
          env: []
          ports:
            - containerPort: 1880
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 1880
            timeoutSeconds: 3
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 1880
            timeoutSeconds: 3
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: node-red-data
              mountPath: /data
      securityContext:
        fsGroup: 1001
      volumes:
        - name: node-red-data
          persistentVolumeClaim:
            claimName: node-red-data
