k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  selector:
    app: node-red
  ports:
    - name: http
      port: 80
      targetPort: http
