k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: node-red
  name: node-red
  annotations:
    kubernetes.io/tls-acme: "true"

spec:
  tls:
    - hosts:
        - node-red.k8s.zebbra.ch
      secretName: kuard-tls
  rules:
  - host: node-red.k8s.zebbra.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: node-red
          servicePort: http
